Fix player controls height on mobile

--- a/src/components/videos/vid-player.css
+++ b/src/components/videos/vid-player.css
@@ -22,6 +22,7 @@
   flex-direction: column;
   justify-content: start;
   width: 100%;
+  height: 100%;
   align-items: start;
   padding : 2rem 1.5rem;
   /* border: 8px solid transparent; */
